--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DeceitActivity"
+            android:exported="false"
+            android:label="@string/title_activity_deceit">
+        </activity>
     </application>
 
 </manifest>
